@@ -5,6 +5,7 @@ Copyright (c) 2005-2018 Alon Bar-Lev <alon.barlev@gmail.com>
 
 * openssl: build with openssl ec disabled
 * openssl: support RSA_NO_PADDING padding, thanks to Selva Nair
+* core: reduce mutex lock scope of add/remove provider, thanks to Frank Morgner
 
 2018-08-16 - Version 1.25.1
 
